--- a/src/app/bottom-nav/bottom-nav.component.html
+++ b/src/app/bottom-nav/bottom-nav.component.html
@@ -31,7 +31,7 @@
   </MDTabContentItem>
   <MDTabContentItem>
     <GridLayout>
-      <Label text="Map here" class="h2 text-center"></Label>
+      <ns-map></ns-map>
     </GridLayout>
   </MDTabContentItem>
   <MDTabContentItem>
