--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -1,4 +1,10 @@
 <StackLayout class="body">
-  <Label class="header" text="Nearby events"></Label>
+  <Image class="logo" src="~/icons/valk_logo.png"></Image>
+  <Label class="ilmoitukset" text="Notifications"></Label>
+  <Label
+    class="viiva"
+    text="-----------------------------------------------------------"
+  ></Label>
+  <Label class="events" text="Events for you:"></Label>
   <ns-card></ns-card>
 </StackLayout>
