--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -1,3 +1,34 @@
-img {
-  max-height: 50%;
+.img {
+  margin: 2%;
+}
+
+.cardStyle {
+  background-color: #494b50;
+}
+
+.nimi {
+  color: #f8efd6;
+}
+.x_ikoni {
+  margin-right: 5%;
+  font-size: 15;
+  color: #f8efd6;
+}
+.paivamaara {
+  margin-left: 5%;
+  color: #f8efd6;
+}
+
+.henry {
+  margin-left: 5%;
+  color: #f8efd6;
+}
+
+.tickets {
+  margin-left: 5%;
+  color: #f8efd6;
+}
+#sydan {
+  margin-right: 5%;
+  font-size: 15;
 }
