--- a/src/app/register-forms/register-forms.component.html
+++ b/src/app/register-forms/register-forms.component.html
@@ -88,7 +88,7 @@
             myForm.get('password').value.length > 0
           "
           class="signupbutton"
-          text="Create account"
+          text="Sign up"
           (tap)="submitSignUp()"
         ></Button>
       </FlexboxLayout>
