--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,9 +1,12 @@
 <StackLayout class="body">
+  <Image
+  src="~/images/finde-keltane.png"
+  class="logo"
+></Image>
   <Label class="otsikko" text="Register"></Label>
-  <Label
-    text="&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;Enter user information&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;"
-    class="sapo"
-  ></Label>
-
+  <Image
+  src="~/images/finde-youraccount-register.png"
+  class="accDetails"
+></Image>
   <ns-register-forms></ns-register-forms>
 </StackLayout>
