log in sivun tyylittely

--- a/src/app/login-forms/login-forms.component.css
+++ b/src/app/login-forms/login-forms.component.css
@@ -58,6 +58,7 @@
   background-color: black;
   color: white;
   font-weight: bold;
+  margin-left: 215px; /* Keskittämistä */
 }
 
 .registered {
@@ -66,12 +67,14 @@
   font-size: 15;
   font-weight: bold;
   color: white;
+  margin-left: 245px; /* Keskittämistä */
 }
 .registered_down {
   margin-left: 4%;
   font-size: 13;
   font-weight: bold;
   color: #ffcb00;
+  margin-left: 358px; /* Keskittämistä */
 }
 
 .error_email {
