--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,15 +1,12 @@
 <StackLayout class="body">
-  <Label class="otsikko" text="Login"></Label>
-
-  <button (tap)="googleSignin()" class="googleButton">
-    <FormattedString>
-      <Span text="&#xf1a0;" class="fab" id="googleicon"></Span>
-      <Span class="teksti" text=" Login with Google"></Span>
-    </FormattedString>
-  </button>
-  <Label
-    text="&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;Kirjaudu sähköpostilla&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;"
-    class="sapo"
-  ></Label>
+  <Image
+  src="~/images/finde-keltane.png"
+  class="logo"
+></Image>
+  <Label class="otsikko" text="Sign in"></Label>
+  <Image
+  src="~/images/finde-youraccount-signin.png"
+  class="accDetails"
+></Image>
   <ns-login-forms></ns-login-forms>
 </StackLayout>
