--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -1,10 +1,14 @@
-<StackLayout class="body">
-  <Image class="logo" src="~/icons/valk_logo.png"></Image>
-  <Label class="ilmoitukset" text="Notifications"></Label>
-  <Label
-    class="viiva"
-    text="-----------------------------------------------------------"
-  ></Label>
-  <Label class="events" text="Events for you:"></Label>
-  <ns-card></ns-card>
-</StackLayout>
+<ScrollView>
+  <StackLayout class="body">
+    <Image class="logo" src="~/icons/valk_logo.png"></Image>
+    <Label class="ilmoitukset" text="Notifications"></Label>
+    <Label
+      class="viiva"
+      text="-----------------------------------------------------------"
+    ></Label>
+    <Label class="events" text="Events for you:"></Label>
+    <ActivityIndicator [busy]="isLoading"></ActivityIndicator>
+
+    <ns-card *ngFor="let event of events" [eventData]="event"></ns-card>
+  </StackLayout>
+</ScrollView>
