uusi_ulkoasu_kokonaan_ja_scrollview

--- a/src/app/bottom-nav/bottom-nav.component.html
+++ b/src/app/bottom-nav/bottom-nav.component.html
@@ -6,16 +6,16 @@
       <Image src="font://&#xf0f3;" class="fas"></Image>
     </MDTabStripItem>
     <MDTabStripItem
-      (tap)="changeActive(2)"
-      [ngClass]="{ active: active == 2 }"
+      (tap)="changeActive(3)"
+      [ngClass]="{ active: active == 3 }"
       class="special"
     >
       <Label text="Locations"></Label>
       <Image src="font://&#xf3c5;" class="fas"></Image>
     </MDTabStripItem>
     <MDTabStripItem
-      (tap)="changeActive(3)"
-      [ngClass]="{ active: active == 3 }"
+      (tap)="changeActive(2)"
+      [ngClass]="{ active: active == 2 }"
       class="special"
     >
       <Label text="Person"></Label>
@@ -26,7 +26,7 @@
   <!-- The number of TabContentItem components should corespond to the number of TabStripItem components -->
   <MDTabContentItem>
     <GridLayout>
-      <Label text="Events" class="h2 text-center"></Label>
+      <ns-notifications></ns-notifications>
     </GridLayout>
   </MDTabContentItem>
   <MDTabContentItem>
@@ -36,7 +36,6 @@
   </MDTabContentItem>
   <MDTabContentItem>
     <GridLayout>
-      <Label text="Personel filter here" class="h2 text-center"></Label>
-    </GridLayout>
-  </MDTabContentItem>
-</MDBottomNavigation>
+      <ns-personel></ns-personel>
+    </GridLayout> </MDTabContentItem
+></MDBottomNavigation>
