--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,6 +1,6 @@
 <CardView class="cardStyle" margin="20" elevation="40" radius="1">
-  <FlexboxLayout flexDirection="row">
-    <Image width="35%" [src]="eventData.kuvaUrl" class="img"></Image>
+  <FlexboxLayout>
+    <Image width="30%" src="~/icons/harrastukset.png" class="img"></Image>
     <StackLayout flexGrow="1">
       <FlexboxLayout justifyContent="space-between">
         <label class="nimi" [text]="eventData.nimi" color="white"></label>
