--- a/src/app/login-forms/login-forms.component.css
+++ b/src/app/login-forms/login-forms.component.css
@@ -58,27 +58,28 @@
   background-color: black;
   color: white;
   font-weight: bold;
-  margin-left: 215px; /* Keskittämistä */
 }
 
 .registered {
-  margin-left: 4%;
-  margin-top: 3%;
+  padding-left: 20%;
+  padding-top: 3%;
   font-size: 15;
   font-weight: bold;
   color: white;
-  margin-left: 245px; /* Keskittämistä */
 }
 .registered_down {
-  margin-left: 4%;
+  padding-left: 20%;
   font-size: 13;
   font-weight: bold;
   color: #ffcb00;
-  margin-left: 358px; /* Keskittämistä */
 }
 
 .error_email {
   margin-left: 6%;
   font-weight: bold;
   font-size: 15;
+}
+
+.scroll {
+  height: 100%;
 }
