--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -7,11 +7,23 @@
   background-size: 110% 35%; /* Customize the background image size */
 }
 
+.googleButton {
+  background-color: black;
+  color: white;
+  border-radius: 25;
+  font-size: 18;
+  width: 80%;
+}
+
+#googleicon {
+  color: red;
+}
+
 .otsikko {
   text-align: center;
   margin-top: 3%;
   font-size: 30;
-  color: #F8EFD6;
+  color: #f8efd6;
   font-weight: bold;
 }
 
@@ -30,7 +42,7 @@
 
 .teksti {
   font-size: 17;
-  color: #F8EFD6;
+  color: #f8efd6;
 }
 
 .sapo {
@@ -40,7 +52,7 @@
   font-size: 18;
 
   font-weight: bold;
-  color: #F8EFD6;
+  color: #f8efd6;
 }
 
 .registered {
