--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -1,3 +1,6 @@
+<!-- Ilmoitukset komponentti. Tällä komponentilla näytetään tapahtumat card-komponentin avulla.
+Jokaiselle tapahtumalle välitetään tiedot card-komponentille.  -->
+
 <StackLayout class="body">
   <Image class="logo" src="~/icons/valk_logo.png"></Image>
   <Label class="ilmoitukset" text="Notifications"></Label>
