--- a/src/app/register-forms/register-forms.component.html
+++ b/src/app/register-forms/register-forms.component.html
@@ -1,3 +1,4 @@
+<!-- Rekisteröinti-lomakkeet. Validointi kertoo, missä tiedoissa on virheitä. -->
 <ScrollView class="scroll">
   <StackLayout marginTop="5%" height="150%">
     <StackLayout
