--- a/src/app/startpage/startpage.component.html
+++ b/src/app/startpage/startpage.component.html
@@ -1,3 +1,5 @@
+
+<!-- Sovelluksen aloitus-sivu. Tästä navigoidaan rekisteröinti tai login-sivulle.  -->
 <StackLayout class="body">
   <Image src="~/icons/valk_logo.png" class="logo"></Image>
 
