--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,9 +1,12 @@
+<!-- Mapbox-kartta.  -->
+
 <ContentView height="100%" width="100%">
   <Mapbox
     accessToken="pk.eyJ1IjoibWlra28xOTg1IiwiYSI6ImNsbmlyazhqczA2N20yeHFvbGpxaHozOW4ifQ.GdqmP1CH2_dAOa40He98-Q"
     mapStyle="traffic_day"
     latitude="62.24147"
     longitude="25.72088"
+    delay="1000"
     hideCompass="true"
     zoomLevel="18"
     showUserLocation="true"
