--- a/src/app/personel/personel.component.html
+++ b/src/app/personel/personel.component.html
@@ -1,3 +1,5 @@
+<!-- Tällä komponentilla tehdään suodatus. Neljä ikonia, joita painamalla, voidaan valita,
+minkä genren tapahtumia näytetään. -->
 <StackLayout class="body">
   <Image class="logo" src="~/icons/valk_logo.png"></Image>
   <label class="text" text="Find events"></label>
