--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -4,16 +4,17 @@
   <Mapbox
     accessToken="pk.eyJ1IjoibWlra28xOTg1IiwiYSI6ImNsbmlyazhqczA2N20yeHFvbGpxaHozOW4ifQ.GdqmP1CH2_dAOa40He98-Q"
     mapStyle="traffic_day"
-    latitude="62.24147"
-    longitude="25.72088"
+    [latitude]="this.locationService.latitude"
+    [longitude]="this.locationService.longitude"
     delay="1000"
     hideCompass="true"
     zoomLevel="18"
-    showUserLocation="true"
+    showUserLocation="false"
     disableZoom="false"
     disableRotation="false"
     disableScroll="false"
     disableTilt="false"
+    trackUser="true"
     (mapReady)="onMapReady($event)"
   >
   </Mapbox>
