filterstore_filterointi_ehdolliset_luokat

--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,3 +1,4 @@
+<!--Gridillä tapahtuman mainossivu. -->
 <GridLayout color="white" rows="auto, auto" class="body">
   <Image
     *ngIf="this.event && this.event.length > 0"
