--- a/src/app/personel/personel.component.html
+++ b/src/app/personel/personel.component.html
@@ -1,7 +1,14 @@
 <!-- Tällä komponentilla tehdään suodatus. Neljä ikonia, joita painamalla, voidaan valita,
 minkä genren tapahtumia näytetään. -->
 <StackLayout class="body">
-  <Image class="logo" src="~/icons/valk_logo.png"></Image>
+  <FlexboxLayout
+    flexDirection="row"
+    justifyContent="space-between"
+    alignItems="center"
+  >
+    <Image class="logo" src="~/icons/valk_logo.png"></Image>
+    <Image class="menu" src="~/icons/menu.png"></Image
+  ></FlexboxLayout>
   <label class="text" text="Find events"></label>
   <Label class="text2" text="Filter the events by category"></Label>
   <StackLayout class="icongrid">
