--- a/src/app/personel/personel.component.html
+++ b/src/app/personel/personel.component.html
@@ -7,7 +7,7 @@ minkä genren tapahtumia näytetään. -->
     alignItems="center"
   >
     <Image class="logo" src="~/icons/valk_logo.png"></Image>
-    <Image class="menu" src="~/icons/menu.png"></Image
+    <Image (tap)="logOut()" class="menu" src="~/icons/menu.png"></Image
   ></FlexboxLayout>
   <label class="text" text="Find events"></label>
   <Label class="text2" text="Filter the events by category"></Label>
