--- a/src/app/startpage/startpage.component.html
+++ b/src/app/startpage/startpage.component.html
@@ -3,11 +3,11 @@
   <Image src="~/icons/valk_logo.png" class="logo"></Image>
 
   <FlexboxLayout class="flex">
-    <button
+    <Button
       class="register_button"
       text="Register"
       (tap)="routeRegister()"
-    ></button>
+    ></Button>
     <label class="registered" text="Already have an account?"></label>
 
     <label class="login" text="Log in here!" (tap)="routeLogin()"></label>
