--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -2,6 +2,7 @@
   background-color: #494b50;
   max-height: 15vh;
   overflow: hidden;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.304);
 }
 
 .image {
