--- a/src/app/login-forms/login-forms.component.css
+++ b/src/app/login-forms/login-forms.component.css
@@ -59,6 +59,9 @@
   color: white;
   font-weight: bold;
 }
+.loginButton:active {
+  background-color: whitesmoke;
+}
 
 .registered {
   padding-left: 20%;
