--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,12 +6,12 @@ Silloin kun suoritetaan funktioita, näytetään pelkästään latausikoni. -->
   <Image src="~/images/finde-keltane.png" class="logo"></Image>
 
   <Image src="~/images/finde-youraccount-signin.png" class="accDetails"></Image>
-  <button (tap)="googleSignin()" class="googleButton">
+  <Button (tap)="googleSignin()" class="googleButton">
     <FormattedString>
       <Span text="&#xf1a0;" class="fab" id="googleicon"></Span>
       <Span class="teksti" text=" Login with Google"></Span>
     </FormattedString>
-  </button>
+  </Button>
 
   <StackLayout>
     <ns-login-forms></ns-login-forms>
