--- a/src/app/personel/personel.component.html
+++ b/src/app/personel/personel.component.html
@@ -7,7 +7,11 @@ minkä genren tapahtumia näytetään. -->
     alignItems="center"
   >
     <Image class="logo" src="~/icons/valk_logo.png"></Image>
-    <Image (tap)="logOut()" class="menu" src="~/icons/menu.png"></Image
+    <Image
+      (tap)="routeSettings()"
+      class="menu"
+      src="~/icons/asetuksetVarillinen-icon.png"
+    ></Image
   ></FlexboxLayout>
   <label class="text" text="Find events"></label>
   <Label class="text2" text="Filter the events by category"></Label>
