toimiva gdpr komponentti reitityksen kanssa

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -9,7 +9,7 @@
       <Button class="iconbuttondistance"></Button>
       <Label class="text" text="Distance determination"></Label>
     </FlexboxLayout>
-    <FlexboxLayout marginTop="3%">
+    <FlexboxLayout marginTop="3%" (tap)="navigateToPrivacy()">
       <Button class="iconbuttonpolicy"></Button>
       <Label class="text" text="Terms of Use and privacy policy"></Label>
     </FlexboxLayout>
